[gd_scene load_steps=4 format=3 uid="uid://qnoomkjdeem7"]

[ext_resource type="Script" uid="uid://cxg1kfm4kc8hc" path="res://scripts/ui/pause_menu.gd" id="1_6tw0m"]
[ext_resource type="Texture2D" uid="uid://crsai1t13mxtw" path="res://buttons/continue.png" id="2_0lmf7"]
[ext_resource type="Texture2D" uid="uid://crlxbvw6ect0s" path="res://buttons/main menu.png" id="3_f6eus"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6tw0m")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -432.0
offset_top = -538.0
offset_right = 434.0
offset_bottom = 541.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("2_0lmf7")
flat = true

[node name="Main_menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("3_f6eus")
flat = true

[connection signal="mouse_entered" from="VBoxContainer/Continue" to="." method="_on_continue_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Continue" to="." method="_on_continue_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Main_menu" to="." method="_on_main_menu_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Main_menu" to="." method="_on_main_menu_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Main_menu" to="." method="_on_main_menu_pressed"]
